# BitRush

./: README.md
server/backend/: Cargo.toml
server/backend/src/: classes.rs  database.rs  main.rs  routes.rs
server/db/: Dockerfile  docker-compose.yml
