[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bcrypt = "0.15.1"
postgres = "0.19.7"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
